Assign StyleDeclaration methods

--- a/Test/run.html
+++ b/Test/run.html
@@ -31,6 +31,7 @@
 	
 	<!-- Use the DOM in the current browser -->
 	<script>exports = {}</script>
+	<script src="../Source/StyleDeclaration.js"></script>
 	<script src="../Source/sg-regex-tools.js"></script>
 	<script src="../Source/SheetParser.CSS.js"></script>
 	<script src="../Source/Sheet.js"></script>
